# deep_drone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.bash
config/: param.yaml
launch/: sphinx_broadcaster.launch  sphinx_pid_control.launch
src/: sphinx.sh
src/02_Installations/: README.md
src/03_Takeoff/: 03_Lecture.ipynb  sp_takeoff.py
src/04_Keybaord_Control/: 04_Lecture.ipynb  sp_ctrl.py  sp_drone.py
src/05_Streaming/: 05_Lecture.ipynb  image_publisher.py  sp_olympe.py
src/06_Pose/: broadcaster.py
src/06_Streaming/: sp_olympe.py  sp_stream.py
src/07_Pose/: listener.py  setup.rviz  sp_broadcaster.py
src/07_Pulse/: sp_pulse.py
src/08_Flight_Control/: sp_pid.py  thread.py
src/08_Pulse/: sp_pulse.py
src/09_Flight_Control/: gui.py  sp_pid.py  thread.py
src/10_DAQ/: sp_daq.py
src/11_Detection/: sp_detector.py
src/11_Digital_Filter/: sp_filter.py
src/12_Detection/: sp_detector.py
src/Ep02_Installations/: version.py
src/Ep04_Keybaord_Control/: sp_ctrl.py
src/Ep1_Installations/: README.md
src/Ep2_ROS_Basics/: Homework2.txt  takeoff.py
src/Ep3_Keybaord_Control/: Homework3.txt  sp_ctrl.py
src/Ep4_Streaming/: Homework4.txt  image_publisher.py  sp_olympe.py
src/Ep5_Pose/: broadcaster.py
src/Ep6_Flight_Control/: sp_pid.py
src/Ep7_Deep_Learning/: temp.py
src/lib/: pid.py  pulse.py
src/parrot_ros/: CMakeLists.txt  package.xml  sphinx.sh
src/parrot_ros/src/: pr_cmd.py  pr_keyboard.py  pr_olympe.py  pr_takeoff.py
